# glfw-drawer

./: .gitignore  CMakeLists.txt  main.cpp  object.hpp  point.frag  point.vert  shape.hpp  window.hpp
include/graphic/: draw.hpp  graphic.hpp  load.hpp  object.hpp  shader.hpp  shape.hpp  window.hpp
src/graphic/: draw.cpp  shader.cpp
